Examples now use runner framework.

--- a/seq_cst/cpp/CMakeLists.txt
+++ b/seq_cst/cpp/CMakeLists.txt
@@ -4,4 +4,5 @@ include(.eecs230/CMakeLists.txt)
 
 add_program(seq_cst src/seq_cst.cpp)
 add_program(data_race src/data_race.cpp)
-add_program(atomics src/atomics.cpp)
+add_program(mutex src/mutex.cpp)
+add_program(publish src/publish.cpp)
